Fix podcast channel titles not showing up completely
The listheading widget was being rendered incorrectly in case the
element had no details button enabled.

--- a/css/style.css
+++ b/css/style.css
@@ -120,6 +120,9 @@ h2 span:hover .play {
 	float: left;
 	overflow: hidden;
 	text-overflow: ellipsis;
+}
+
+.album-area > h2.with-details > span {
 	max-width: calc(100% - 24px);
 }
 
